--- a/block.html
+++ b/block.html
@@ -6,10 +6,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            background-color: red;
+            border: 35px solid rebeccapurple;
+            padding: 10px;
+            margin: 0px
+                /* display: inline; */
+
+        }
+
+        h2 {
+            background-color: purple;
+        }
+
+        p {
+            background-color: rgb(245, 220, 150);
+        }
+
+        span {
+            background-color: green;
+            display: inline-block;
+            border: 5px solid red;
+            margin: 20px;
+            /* width: 200px;
+            height: 200px; */
+
+        }
+
+        div {
+            background-color: lightcoral;
+            width: 300px;
+            height: 200px;
+            /* padding-top: 35px;
+            margin-top: 50px; */
+        }
+
+
+        /* 
+        a{
+            display: block;
+        } */
+    </style>
+
 </head>
 
 <body>
-    <h1></h1>
+    <h1>Boro mama</h1>
+    <h1>Boro khalu</h1>
+    <p>this is block paragraph</p>
+
+
+
+
+
+    <span>coto bhai</span>
+    <span>ami</span>
+    <span>coto mama</span>
+
+    <a href="www.google.com">google</a>
+    <a href="www.google.com">google</a>
+    <a href="www.google.com">google</a>
+    <a href="www.google.com">google</a>
+    <div>
+        <h2>Room-1</h2>
+        <p>staying some one</p>
+    </div>
+    <div>
+        <h2>Room-2</h2>
+        <p>staying some one</p>
+    </div>
+    <div>
+        <h2>Room-3</h2>
+        <p>staying some one</p>
+    </div>
+
 </body>
 
 </html>
